# poms

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  build-electron.sh  build-web.sh  index.html  poms-app-798a7e2ee178b75.js  poms-app-798a7e2ee178b75_bg.wasm
media/: contents.md
media/slides/: mid-term.md
scripts/: build-electron.sh  build-web.sh  generate_pdb.py
src/: app.rs  camera.rs  compute.rs  context.rs  gpu.rs  grid.rs  gui.rs  main.rs  parser.rs  render.rs  render_pass.rs  state.rs  texture.rs  ui.rs  web_utils.rs
src-electron/: package-lock.json  package.json
src-electron/src/: index.js
src/app/: Cargo.toml  camera.rs  constants.rs  context.rs  dtos.rs  file.rs  input.rs  mod.rs  storage.rs  ui.rs
src/app/src/: app.rs  camera.rs  file.rs  gpu_context.rs  lib.rs  main.rs  storage.rs  ui.rs
src/app/src/app/: constants.rs
src/app/src/ui/: egui_wrapper.rs  event.rs  state.rs
src/app/src/utils/: mod.rs  parser.rs
src/app/ui/: egui_wrapper.rs  event.rs
src/app/ui/elements/: error.rs  menu.rs  settings.rs
src/app/utils/: parser.rs
src/common/: Cargo.toml  resources.rs
src/common/models/: atom.rs  grid.rs  mod.rs
src/common/resources/: atoms_with_lookup.rs  df_grid.rs  grid.rs  ses_grid.rs
src/common/src/models/: grid.rs
src/common/src/resources/: atoms_with_lookup.rs  df_texture.rs
src/compute/: Cargo.toml  bind_group.rs  buffer.rs  composer.rs  dfr_pass.rs  grid.rs  mod.rs  probe_pass.rs
src/compute/passes/: dfr_pass.rs  mod.rs  probe.rs  probe_pass.rs  refinement.rs  shared.rs
src/compute/passes/resources/: bind_group.rs  buffer.rs  mod.rs  texture.rs
src/compute/resources/: df_grid.rs  df_texture.rs  distance_field.rs  grid_points.rs  mod.rs
src/compute/shaders/: dfr.wgsl  probe.wgsl  refinement.wgsl
src/compute/src/: lib.rs  state.rs
src/compute/src/passes/: mod.rs  probe.rs  refinement.rs
src/compute/src/resources/: distance_field.rs  grid_points.rs
src/compute/src/shaders/: probe.wgsl
src/electron/: package-lock.json  package.json
src/gui/: async_file.rs  components.rs  egui.rs  error.rs  menu.rs  mod.rs  my_app.rs  settings.rs
src/gui/components/: error.rs  menu.rs  settings.rs
src/parser/: elements.rs  mod.rs  parse.rs  store.rs
src/parser/data/: elements.json
src/passes/: compute.rs  mod.rs  render.rs  resources.rs
src/passes/compute/: compute_pass.rs  probe.rs  refinement.rs  util.rs
src/passes/compute/resources/: df_texture.rs
src/passes/render/: gui_pass.rs  molecular_surface.rs  render_pass.rs  spacefill.rs  util.rs
src/passes/resources/: atom.rs  camera.rs  grid.rs  light.rs  molecule.rs  molecule_repo.rs  repo.rs  ses_state.rs  settings.rs
src/passes/shaders/: df_refinement.wgsl  probe.wgsl  ses_raymarching.wgsl  spacefill.wgsl
src/poms-app/: Cargo.toml
src/poms-app/src/: app.rs  gpu_context.rs  main.rs
src/poms-app/src/app/: anim.rs  limits.rs  theme.rs  ui.rs
src/poms-app/src/app/data/: file_loader.rs  mod.rs  molecule_parser.rs  molecule_storage.rs
src/poms-app/src/app/data/pdb_apis/: download_api.rs  mod.rs  search_api.rs
src/poms-app/src/app/input/: camera_controller.rs  mod.rs  mouse_input.rs
src/poms-app/src/app/ui/: egui_wrapper.rs  events.rs  glue.rs  mod.rs  state.rs
src/poms-app/src/app/ui/core/: egui_wrapper.rs
src/poms-app/src/app/ui/elements/: error.rs  files.rs  menu.rs  mod.rs  search.rs  settings.rs
src/poms-common/: Cargo.toml
src/poms-common/src/: lib.rs  limits.rs
src/poms-compute/: Cargo.toml
src/poms-compute/src/: lib.rs  state.rs
src/poms-render/: Cargo.toml
src/poms-render/src/: lib.rs  state.rs
src/render/: Cargo.toml  composer.rs  mod.rs
src/render/passes/: ball_and_stick_pass.rs  df_visualize_pass.rs  gui_pass.rs  mod.rs  molecular_surface.rs  raymarch_pass.rs  ses_pass.rs  spacefill.rs  spacefill_pass.rs
src/render/resources/: camera.rs  df_texture.rs  distance_field.rs  light.rs  mod.rs
src/render/shaders/: atom.wgsl  df_visualize.wgsl  molecular_surface.wgsl  raymarch.wgsl  spacefill.wgsl
src/render/shared/: camera.rs  mod.rs
src/render/src/: lib.rs  state.rs
src/renderer/: atom_pass.rs  ball_and_stick_pass.rs  camera.rs  mod.rs  ses_pass.rs
src/renderer/shaders/: atom.wgsl  ray-marching.wgsl
src/shaders/: atom.legacy.wgsl  atom.wgsl
src/shared/: camera.rs  events.rs  grid.rs  input.rs  mod.rs  molecule.rs  resources.rs
src/shared/resources/: camera.rs  depth_texture.rs  distance_field.rs  molecule_grid.rs  ses_grid.rs
src/ui/: egui_wrapper.rs  event.rs  file.rs
src/ui/elements/: error.rs  menu.rs  mod.rs  settings.rs
src/utils/: arcball.rs  camera.rs  constants.rs  elements.rs  input.rs  mod.rs  molecule.rs  parser.rs  wasm.rs
(+61 files in other folders)
