[package]
name = "poms"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.8", features = ["derive", "extern_crate_alloc"] }
cgmath = "0.18"
egui = { version = "0.21", default-features = false }
egui-winit = { version = "0.21", default-features = false }
egui_wgpu_backend = "0.22"
egui_winit_platform = "0.18"
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4"
permutation = "0.4"
rfd = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.0"
wgpu = "0.15"
winit = { version = "0.28", features = ["x11"] }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window"] }
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4"

[features]
vulkan = []
no-vsync = []
