[package]
name = "poms-app"
version = "0.1.0"
edition = "2021"

[dependencies]
poms-common = { path = "../poms-common" }
poms-compute = { path = "../poms-compute" }
poms-render = { path = "../poms-render" }

bytemuck = { workspace = true }
cgmath = { workspace = true }
wgpu = { workspace = true }

egui = "0.28"
egui-wgpu = "0.28"
egui-winit = { version = "0.28", default-features = false }
futures = "0.3"
log = "0.4"
pdbtbx = "0.11"
rfd = "0.14"
simple_logger = "5.0"
thiserror = "1.0.57"
uuid = { version = "1.7.0", features = ["v4", "js"] }
winit = { version = "0.29", features = ["x11"] }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window"] }
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4"

[features]
vulkan = []
no-vsync = []
