[package]
name = "poms-app"
version = "0.1.0"
edition = "2021"

[dependencies]
poms-common = { path = "../poms-common" }
poms-compute = { path = "../poms-compute" }
poms-render = { path = "../poms-render" }

bytemuck = { workspace = true }
cgmath = { workspace = true }
wgpu = { workspace = true }

egui = { version = "0.28" }
egui-wgpu = { version = "0.28", default-features = false }
egui-winit = { version = "0.28", default-features = false }
futures = { version = "0.3", default-features = false, features = ["executor"] }
log = "0.4"
pdbtbx = { version = "0.11", default-features = false, features = [
    "compression",
] }
rfd = { version = "0.14", default-features = false, features = ["gtk3"] }
simple_logger = { version = "5.0", default-features = false }
uuid = { version = "1.7.0", features = ["v4", "js"] }
winit = { version = "0.29", features = ["x11"] }
anyhow = "1.0.86"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window"] }
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4"

[features]
vulkan = []
no-vsync = []
